# vcp

./: .gitignore  CMakeLists.txt  build_and_cp.sh
algorithm/: CMakeLists.txt  palindromic_substring.cc  quick_sort.cc
cbase/: CMakeLists.txt  Readme.md  big_endian_little_endian.cc  bubble_sort_demo.cc  cpu_rate.cc  cross_cpu_rate.cc  isspace_demo.cc  prime_demo.cc  quick_sort_demo.cc  strncmp_demo.cc  strstr_demo.cc  strtok_demo.cc  yiyan_cpu_rate.cc
common/: WsaHook.c  WsaHook.h  WsaTimer.h  WsaTracer.h
cppbase/: CMakeLists.txt  binutil.cc  binutil_demo.cc  class_demo.cc  class_desp.cc  comments.cc  count_number.cc  cout_error.cc  enum_number_for.cc  enum_number_while.cc  forward_move_demo.cc  function_demo.cc  lambda_demo.cc  main.cc  override.cc  plus.cc  plus_50_100_for.cc  plus_50_100_while.cc  range_10_0_for.cc  range_10_0_while.cc  return_cpx.c  shared_ptr_demo.cc  sort_demo.cc  string_demo.cc  sum_number.cc  time_use_demo.cc  timer_demo.cc  unique_ptr_demo.cc
cppbase/complex/: CMakeLists.txt
cppbase/complex/static_const_template/: CMakeLists.txt  main.cc  options_lib_template.cc  options_registry.h  registration_token.cc  registration_token.h
datastructure/: maxsubarray.cc  sort.cc  sort.java
designpattern/: .gitignore  CMakeLists.txt  DecoratorPattern.cc  FactoryMethodPattern.cc  ObserverPattern.cc  SimpleFactoryPattern.cc  SingletonPattern.cc  VirtualFactoryPattern.cc
gdb/: coredump.c  dup
hex-converter/: CMakeLists.txt  main.cc
include/: base.h  baseselect.h  basesocket.h
network/: CMakeLists.txt  build_android.cmd  build_android.sh  getsockname_client_demo.cc  getsockname_server_demo.cc  iocp_demo.cc  select_demo.cc  tcp_client_demo.cc  tcp_recv_int_demo.cc  tcp_recv_struct_demo.cc  tcp_recv_struct_demo_1.cc  tcp_send_int_demo.cc  tcp_send_struct_demo.cc  tcp_send_struct_demo_1.cc  tcp_server_demo.cc  udp_demo.cc
network/build_android/: .ninja_deps  .ninja_log  CMakeCache.txt  broadcast  build.ninja  cmake_install.cmake  epoll_demo  getsockname_client_demo  getsockname_server_demo  http_demo  sliding_window  tcp_packet  tcp_recv_int_demo  tcp_recv_struct_demo  tcp_recv_struct_demo_1  tcp_send_int_demo  tcp_send_struct_demo  tcp_send_struct_demo_1  udp_demo
network/build_android/cbase/: big_endian_little_endian  cmake_install.cmake  cpu_rate  isspace_demo  strncmp_demo  strstr_demo
network/build_android/cppbase/: binutil_demo  class_desp  cmake_install.cmake  main  override
network/build_android/cppbase/complex/: cmake_install.cmake
network/build_android/cppbase/complex/static_const_template/: cmake_install.cmake
network/build_android/hex-converter/: cmake_install.cmake  hexcvt
network/build_android/network/: cmake_install.cmake
network/build_android/network/reactor/: cmake_install.cmake
network/reactor/: CMakeLists.txt  Reactor.cc  Reactor.h  SocketHandler.cc  SocketHandler.h  main.cc
nn/: CMakeLists.txt
pixiels/: color_cluster.py
topper/: CMakeLists.txt  win32.c
video/: CMakeLists.txt  build_ninja.sh  build_vs.bat
video/src/: demo_player.c  demo_player_2.c  demo_player_3.c  ffplayer.c  ffplayer_02.c  query.sql  tutorial01.c  tutorial02.c
